--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,6 @@
 {
     "name": "Rojo template file",
-   
+    "servePlaceIds": [0, 17607533820],
     "tree": {
       "$className": "DataModel",
       "ReplicatedFirst": {
